fix some spacing (minor)

--- a/personal-website-app/src/app/contact/contact.component.scss
+++ b/personal-website-app/src/app/contact/contact.component.scss
@@ -24,5 +24,6 @@ mat-card-content {
 }
 
 .previous-button {
-    margin-top: 1em;
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
